--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <resources>
-  <color name="splashscreen_background">#000000</color>
-  <color name="splashscreen_statusbar_color">#000000</color>
+  <color name="bootsplash_background">#0E0E0E</color>
+  <color name="notification_icon">#00A3FF</color>
 </resources>
